objects/APLFilter_FieldSet__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Reference_FieldSet_Name__c</fullName>
        <label>Reference FieldSet Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Object__c</fullName>
        <label>Reference Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>APL Filter FieldSet</label>
</CustomObject>